--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,12 @@
     "eslint": "^9.28.0",
     "globals": "^16.2.0",
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "morgan": "^1.10.0"
   }
 }
